--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.18.0",
     "@eslint/js": "^9.39.1",
+    "@types/aws-lambda": "^8.10.159",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "aws-cdk-lib": "^2.230.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
