--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "test": "vitest"
+    "test": "vitest --no-watch",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@middy/core": "^6.4.5",
