--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.940.0",
+    "@aws-sdk/lib-dynamodb": "^3.940.0",
     "@middy/core": "^6.4.5",
     "@middy/http-cors": "^6.4.5",
     "@middy/http-event-normalizer": "^6.4.5",
